[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-activity-cli"
version = "1.0.0"
description = "CLI tool to fetch GitHub user activity"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = ["requests>=2.25.0"]

[tool.setuptools]
py-modules = ["main", "github_api", "event_formatter"]

[project.scripts]
github-activity = "main:main"